# box-to-polygon

./: .gitignore  pyproject.toml
refine_boxes/: convert_outputs.py  run_kwiver_refiner_pipeline.py  utils.py
tests/: test_refine_boxes.py
