[tool.poetry]
name = "refine-boxes"
version = "0.1.0"
description = ""
authors = ["David Russell <david.russell@kitware.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.4"
ubelt = "^0.9.5"
kwcoco = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
